SscBoogie/Test/tutorial/Fig2-Counter.ssc
class Counter {
  int x;
  
  public void Inc()
    ensures old(x) < x;
  {
    x = 2*x;  // error: possibly unsatisfied postcondition
  }
}
